fix responsive bug

--- a/src/components/header/Navbar/Navbar.css
+++ b/src/components/header/Navbar/Navbar.css
@@ -46,3 +46,12 @@
 #navbar .container-fluid{
     padding: 0;
 }
+
+@media (min-width: 50px) {
+    #nav-one{
+        display: none;
+    }
+}
+@media (min-width: 576px) {
+
+}
