--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,6 +1,5 @@
 .Footer{
     width: 100%;
-    height: 40px;
     background-color: #0A6FB7;
     color: #ffffff;
     position: fixed;
@@ -14,12 +13,16 @@
     line-height: 24px;
     margin-top: auto;
     margin-bottom: auto;
+    justify-self: center!important;
 }
+
 .FooterContainer{
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     justify-self: center;
     text-align: center;
     height: 100%;
+    padding: 5px 0 5px 0;
 }
