--- a/src/Layouts/SuccessefulPage/successfulPage.module.css
+++ b/src/Layouts/SuccessefulPage/successfulPage.module.css
@@ -11,3 +11,9 @@
     font-weight: 400;
     line-height: 24px;
 }
+.BackBtn{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    background-color: #0A6FB7;
+}
