--- a/src/Layouts/footer/footer.module.css
+++ b/src/Layouts/footer/footer.module.css
@@ -1,9 +1,27 @@
+a{
+    text-decoration: none;
+    color: #B8B8B8;
+    padding: 0!important;
+}
 .Footer{
     width: 100%;
     background-color: #0A6FB7;
     color: #ffffff;
     position: fixed;
     bottom: 0;
+}
+.FooterMobile{
+    width: 100%;
+    padding: 5px 0;
+    background-color: #ffffff;
+    color: #B8B8B8;
+    position: fixed;
+    bottom: 0;
+    box-shadow: #e0dddd 0 0 10px;
+}
+.FooterMobileText{
+    font-size: 15px;
+    margin-bottom: 0;
 }
 .FooterText{
     font-family: Roboto;
@@ -25,4 +43,21 @@
     text-align: center;
     height: 100%;
     padding: 5px 0 5px 0;
+}
+
+@media (min-width: 50px) {
+    .Footer{
+        display: none;
+    }
+    .FooterMobile{
+        display: flex;
+    }
+}
+@media (min-width: 768px) {
+    .Footer{
+        display: flex;
+    }
+    .FooterMobile{
+        display: none;
+    }
 }
