--- a/src/Layouts/header/Header.css
+++ b/src/Layouts/header/Header.css
@@ -2,6 +2,7 @@
     margin: 19px 0;
     display: flex;
     align-items: center;
+    background-color: #ffffff!important;
 }
 #selectBtn{
     width: 170px;
