--- a/src/pages/Item/Item.module.css
+++ b/src/pages/Item/Item.module.css
@@ -1,8 +1,3 @@
-#Sider{
-    background-color: #0A6FB7;
-    height: 70vh;
-    border-radius: 10px;
-}
 .Title{
     color: #262626;
     font-family: Roboto;
@@ -28,9 +23,11 @@
     position: relative;
     border-radius: 10px;
     width: 100%;
+    height: 400px;
     background-size: cover;
     background-position: center center
 }
+
 .Buttons{
     display: flex;
     align-items: center;
