item.js responsive

--- a/src/components/Sider/Sider.module.css
+++ b/src/components/Sider/Sider.module.css
@@ -1,9 +1,10 @@
 .Sider{
     position: sticky;
+    top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #0A6FB7;
-    height: 70vh;
+    height: 73vh;
     border-radius: 10px;
 }
