--- a/src/Layouts/Footer/footer.module.css
+++ b/src/Layouts/Footer/footer.module.css
@@ -10,6 +10,7 @@ a{
     position: fixed;
     bottom: 0;
     margin-top: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 0 10px;
 }
 .FooterMobile{
     width: 100%;
